fixed js and css on ie9

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -7598,6 +7598,8 @@ input[type="text"]::-ms-clear {
   border-bottom: 12px solid #ffa600;
   position: relative;
   margin-bottom: 50px; }
+  .footer ul{
+    list-style-type: none }
 
 .footer:after {
   position: absolute;
@@ -7657,8 +7659,7 @@ input[type="text"]::-ms-clear {
   padding-left: 33px;
   background-size: auto 70%;
   height: 25px;
-  width: 25px;
-  background-position: right !important; }
+  width: 25px;}
 
 .footer__link--fb {
   background-position: 4px 3px;
@@ -10383,17 +10384,14 @@ span.arrow {
   font-family: Larsseit-Bold, sans-serif; }
 
 .places-to-go-card__card-name {
-  position: absolute;
-  left: 50%;
-  top: 49%;
-  -webkit-transform: translate3d(-50%, -50%, 0);
+  margin-top: 38%;
+/*  -webkit-transform: translate3d(-50%, -50%, 0);
   -moz-transform: translate3d(-50%, -50%, 0);
   -ms-transform: translate3d(-50%, -50%, 0);
   -o-transform: translate3d(-50%, -50%, 0);
-  transform: translate3d(-50%, -50%, 0);
+  transform: translate3d(-50%, -50%, 0);*/
   color: #fff;
   font-size: 50px;
-  width: 80%;
   text-align: center;
   font-family: Bagnard, serif; }
 
